--- a/css/style.css
+++ b/css/style.css
@@ -541,6 +541,11 @@ footer{
   }
 }
 @media (max-width: 767px) {
+  /* Custom added */
+  .project_details{
+    display: none;
+  }
+  
   h1 {
     font-size: 2.4em;
   }
@@ -565,7 +570,7 @@ footer{
 }
 @media (max-width: 580px) {
   /* custom added */
-  .project .owl-theme .item img{
+  .project .owl-theme .item .project-info{
     padding: 50px;
   }
   /* end custom */
